<resources>
    <string name="app_name">PAI</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?, </string>
    <string name="create_here">Crea una aquí!</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="text_button_createaccount">Unete</string>
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
    <string name="username_card">nombreUsuario</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likecard_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Perfil</string>
    <!---FACEBOOK-->
    <string name="facebook_app_id">1216454841853785</string>
    <string name="fb_login_protocol_scheme">fb1216454841853785</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleImag1e">\"Tirando, bien cool\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et mollis ex. Aenean ornare, sem quis tristique tincidunt, turpis sapien eleifend sem, eu interdum orci mi non sapien. Proin pharetra justo nec lacus fermentum lacinia. Sed auctor porttitor lacus non tempus. Quisque lobortis posuere tortor. Phasellus nec lacus non sem semper lacinia. Quisque condimentum enim vel mi ultricies interdum. Aenean eget mi at mi euismod accumsan eu vel sapien. Pellentesque sed velit risus. Suspendisse aliquam est libero, nec fringilla ipsum scelerisque vitae. Nunc commodo quis mi in pellentesque. Fusce sit amet hendrerit eros. Morbi rhoncus ultrices condimentum. Mauris nunc magna, condimentum non dignissim in, varius id dolor. Morbi turpis odio, eleifend sed congue nec, aliquam suscipit risus.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="title_home">Home</string>
    <string name="number_Leccion_card">Leccion</string>
    <string name="number_card">1</string>
    <string name="lenguaje_card">Ingles</string>
    <string name="completado_leccion_card">Completado</string>
    <string name="prcentaje_leccion_card">0%</string>
    <string name="tab_chat">Chat</string>
    <string name="test_message">Hola, ¿Como te va?</string>
    <string name="message_hour">11:40</string>
    <string name="answer_message">Hello!!!</string>
    <string name="nav_header_title">Luis Cornejo</string>
    <string name="nav_header_subtitle">Prueba</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_settings">Settings</string>

    <string name="error_name">Requiere llenarlo</string>
    <string name="error_email">Requiere llenarlo</string>
    <string name="error_midlename">Requiere llenarlo</string>
    <string name="error_nickname">Requiere llenarlo</string>
    <string name="error_lastname">Requiere llenarlo</string>
    <string name="error_telefono">Requiere llenarlo</string>
    <string name="error_confirmar_password">Requiere llenarlo</string>
    <string name="error_telefonoo">Requiere llenarlo</string>
    <string name="error_datebirt">Requiere llenarlo</string>
    <string name="hint_nickname">Nombre Usuario</string>
    <string name="hint_midlename">Apellido Paterno</string>
    <string name="hint_lastname">Apellido Materno</string>
    <string name="hint_telefonoo">Telefono</string>
    <string name="hint_datebirt">YYYY</string>
    <string name="hint_datebirt3">YYYY-MM-DD</string>
    <string name="hint_confirmar_password">Confirmar Contraseña</string>
    <string name="hint_datebirt4">AAAA-MM-DD</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="hint_gender">Genero</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="title_configuration">Configuración</string>
    <string name="text_button_reset">Cambiar Contraseña</string>
    <string name="text_olvide_pass">Olvide mi contraseña</string>
    <string name="hint_editar">Editar foto</string>
    <string name="Chat">Chat</string>
    <string name="hint_cambiar_status">Descripción</string>
    <string name="descripcion">Mi Descrpción</string>
    <string name="hint_cambiar_descripcion">Cambiar Descripción</string>
    <string name="Selecciona_la_imagen">Seleciona las imagenes</string>
    <string name="bottom_calificar">Calificar</string>
    <string name="Escucha_selecciona">Escucha y selecciona</string>
    <string name="opcion">opcion</string>
    <string name="selecciona">Selecciona la respuesta correcta</string>
    <string name="mm">nkdsnakdndfnjsdga dfshdfashbdfsadhfasbdfhghasjhfbsdlhfasb s dbfsahfibjdfgd adsajblfasfandkgbhbdafdjfuahsrfsdhabflasjbfuaf bebabfjbeja</string>
    <string name="bottom_sig">Siguiente</string>
    <string name="preguntas">Pregunta</string>
    <string name="bottom_back">Regresar</string>
    <string name="title_activity_reading_3_">Reading_3_Activity</string>
    <string name="hint_true">T</string>
    <string name="hint_false">F</string>
    <string name="escribe">Escucha y escribe</string>
    <string name="completa">Completa el parrafo</string>
    <string name="parrafo">Shawn’s family is not very big. His mother and father live in a flat in London. His father works in an insurance company, and his mother is a nurse. Shawn shares a flat with two friends and works in a restaurant. He has two sisters, Lucy and Millie, who live together in Southampton.  Shawn has a girlfriend, and Lucy has a boyfriend, but Millie is single.  Shawn’s girlfriend’s name is Maria, and she’s Italian. He’s in love with her, and with her dog. He loves going for a walk with Maria and her dog.</string>
    <string name="parrafo2">Yesterday I got up at 8:30 in the morning. After I made some coffee, I got dressed and went to the bank because I had to pay the rent. The bank is only a couple blocks away, so I got there in a few minutes. There wasn’t a long line when I got in, so I paid the rent and left.  Afterwards I went to the butcher’s to get some meat. I also stopped at the market to get some tomatoes. I wanted to make pasta. When I got home I wrote a couple of emails.   After a while I started getting hungry, so I decided to get to work on lunch. I put the tomatoes in a pot to cook with the meat, and I put some water on to boil.  After a while the water got hot and I put in the pasta. I cooked it for a few minutes and then sat down to eat.  After lunch, I drank some more coffee and then got ready for work. It takes me about 20 minutes to get to work from where I live.   I was at work for a few hours, on Fridays I only give 2 classes.  I got off work at 8:30 and went to my girlfriend’s house. We went to drink a beer in her neighborhood. I was getting very hungry, so when I got home I made some fried eggs. After that I did some reading and went to sleep.  The end.</string>
    <string name="parrafo3">Yesterday I got up at 8:30 in the morning. After I made some coffee, I got dressed and went to the bank because I had to pay the rent. The bank is only a couple blocks away, so I got there in a few minutes. There wasn’t a long line when I got in, so I paid the rent and left.  Afterwards I went to the butcher’s to get some meat. I also stopped at the market to get some tomatoes. I wanted to make pasta. When I got home I wrote a couple of emails.  After a while I started getting hungry, so I decided to get to work on lunch. I put the tomatoes in a pot to cook with the meat, and I put some water on to boil.  After a while the water got hot and I put in the pasta. I cooked it for a few minutes and then sat down to eat.    After lunch, I drank some more coffee and then got ready for work. It takes me about 20 minutes to get to work from where I live.  I was at work for a few hours, on Fridays I only give 2 classes.    I got off work at 8:30 and went to my girlfriend’s house. We went to drink a beer in her neighborhood. I was getting very hungry, so when I got home I made some fried eggs. After that I did some reading and went to sleep.    The end.</string>
    <string name="word">palabra</string>
    <string name="escribe2">Escribe una historia</string>
    <string name="describe">Describe la imagen</string>
    <string name="text">Text</string>
    <string name="acomoda">Ordena el parrafo</string>
    <string name="Adivina">Adivina la palabra</string>
    <string name="titulo_vocabulary_1">What´s the girl?</string>
    <string name="pares">Toca los pares</string>
    <string name="Traduce">Traduce</string>
    <string name="traduce">Escoge la Traduccion correcta</string>
    <string name="oracionprueba">You \'re missing the period at the end of this sentence.</string>
    <string name="traduce1">Treaduce la oración</string>
    <string name="completa_1">Elige lo faltante</string>
    <string name="listenamdrepeat">Listen And repeat</string>
    <string name="speak">Read</string>
    <string name="Reading">Reading</string>
    <string name="Writing">Writing</string>
    <string name="Listenig">Listening</string>
    <string name="Vocabulary">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="Speaking">Speaking</string>
    <string name="username_status">status</string>
    <string name="Enviar">Enviar solicitud</string>
    <string name="CargandoUserData">Cargando Datos</string>
    <string name="MessageDialogProfile">Por favor espere mientras cargamos los datos</string>
    <string name="Cancelarsolicitud">Cancelar Solicitud</string>
    <string name="Cancelarsolicitud1">Cancelar Solicitud</string>
    <string name="Aceptarsolicitud1">Aceptar Solicitud</string>
    <string name="bottom_calificacion">Calificacion</string>
    <string name="rechazar">Rechazar Solicitud</string>
    <string name="last_seen">Last seen</string>
    <string name="Escribemensaje">Envia un mensaje</string>
    <string name="continuar">Continuar</string>
    <string name="calificacion">Calificacion</string>
    <string name="save10">10</string>
    <string name="tab_chat_espa">Mensajes</string>
    <string name="tab_inicio">Inicio</string>
    <string name="description">Aplicacion creada por:
        Luis Angel Martinez y
        Juan Antonio Romano

        para el Centro de Enzeñanza Industrial como proyecto de titulación.
        Nombre:
        Plataforma de Aprendizaje de idiomas PAI
    </string>


</resources>
