<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResumenActividad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/dp100"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calificacion"
            android:textSize="@dimen/sp25" />

        <TextView
            android:id="@+id/num_cal"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save10"
            android:textSize="@dimen/sp25" />
    </LinearLayout>

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_signin"
            android:layout_gravity="center"
            android:text="@string/opcion"/>



</android.support.design.widget.CoordinatorLayout>