<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity">


    <include layout="@layout/actionbar_toolbar"></include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_nickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                >
               <android.support.design.widget.TextInputEditText
                   android:id="@+id/nickName"
                   android:inputType="text"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_nickname"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_apepat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/midlename"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_midlename"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_apemat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastname"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_telefonoo"
                    android:maxLength="10"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_datebirt4"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_gender"
                    android:textSize="@dimen/sp20"
                    />
                <RadioButton
                android:id="@+id/radio_btn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="@dimen/sp20"
                android:layout_marginLeft="@dimen/dp10"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="@dimen/dp10"
                    android:textSize="@dimen/sp20"
                    />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_createaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpT_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_createaccount"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:errorEnabled="true"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirmar_password"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/joinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_createaccount"
                android:theme="@style/RaisedButtonDark"
                android:layout_marginTop="@dimen/dp40"
                android:background="@drawable/button_rounded_signin"
                />

        </LinearLayout>

    </ScrollView>



</android.support.design.widget.CoordinatorLayout>