<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_height="@dimen/height_cardview"
    android:layout_width="match_parent"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionname_picture" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/background_textcard">
            <TextView
                android:id="@+id/userName_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/completadoCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completado_leccion_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/completado_leccion_card"
                    />
                <TextView
                    android:id="@+id/porcentajeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prcentaje_leccion_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/completado_leccion_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />


            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</android.support.v7.widget.CardView>

